# usnetd

./: Cargo.toml  README.md
eval/: Makefile  README.md  deploy  enp1s0f0config  enp4s0f0config  enp6s0f0config  gather
eval/graphs/: render
eval/smolbench/: Cargo.toml  README.md
eval/smolbench/src/: crawl.rs  defaultserver.rs  httpd.rs  main.rs  smolapi.rs  smolserver.rs
eval/tcp_goodput_desktop_usnetd:usnet_sockets/: cmd  server_1  server_2  setup_1  setup_2
eval/tcp_goodput_server_direct:smoltcp/: cmd  server_1  setup_2
eval/tcp_goodput_server_direct:usnet_sockets/: cmd  setup_2
eval/tcp_goodput_server_direct:usnet_sockets (no BGT)/: cmd  setup_2
eval/tcp_goodput_server_macvtap:smoltcp/: cmd  setup_2
eval/tcp_goodput_server_macvtap:usnet_sockets/: cmd  setup_1  setup_2
eval/tcp_goodput_server_macvtap:usnet_sockets (no BGT)/: cmd  setup_2
eval/tcp_goodput_server_usnetd-uds:smoltcp/: cmd  setup_2
eval/tcp_goodput_server_usnetd-uds:usnet_sockets/: cmd  setup_2
eval/tcp_goodput_server_usnetd-uds:usnet_sockets (no BGT)/: cmd  setup_1  setup_2
eval/tcp_goodput_server_usnetd:smoltcp/: cmd  setup_2
eval/tcp_goodput_server_usnetd:usnet_sockets/: cmd  setup_2
eval/tcp_goodput_server_usnetd:usnet_sockets (no BGT)/: cmd  server_2  setup_2
src/: devices.rs  endpoint.rs  lib.rs  main.rs  pkt.rs
